# docfind

./: Cargo.toml  README.md
.github/workflows/: ci.yml  test.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs  tests.rs
demo/build_index/: documents.json  main.js  size.json
demo/search/: .gitignore  index.html
scripts/: build-demo.sh  build.sh  embed.js
wasm/: Cargo.toml
wasm/build_index/: Cargo.toml
wasm/build_index/src/: lib.rs
wasm/search/: Cargo.toml
wasm/search/src/: lib.rs
wasm/src/: lib.rs
