[package]
name = "docfind_core"
version = "0.5.1"
edition = "2024"

[dependencies]
fst = { version = "0.4", features = ["levenshtein"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
fsst-rs = "0.5.4"
rake = { version = "0.3", optional = true }

[dev-dependencies]
serde_json = "1.0.145"

[dev-dependencies.rake]
version = "0.3"
